# loopscape

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  Trunk.toml  deny.toml  deploy.sh  docker-compose.yml  index.html  netlify.toml  setup.sh
benchmarks/: README.md  escenarios_comparables.csv
docs/: ARQUITECTURA.md  ARTEFACTO_WEB_MANUAL.md  AUDITORIA_RUST.md  AUDITORIA_WORKFLOWS.md  BENCHMARKS.md  CIERRE_EXPERIMENTAL.md  CI_LIGERO.md  CI_NODE24.md  COMPARACION_CORRIDAS.md  CREAR_REPOSITORIO_RAMAS.md  DEMO_GUIADA.md  DSL_ORQUESTACION.md  ESCANEO_SECRETOS.md  ESCENARIOS_COMPARABLES.md  EVENTOS_JSONL.md  FALLOS_CLI_DSL.md  FALLOS_RECUPERABLES.md  FALLO_BIZANTINO.md  FASE_1_BASE_PROFESIONAL.md  FLUJO_RAMA_PATCHES.md  GRAFO_JSON.md  GUIA_USO.md  HF_SPACES_DEMO.md  INDICE_FINAL.md  INFORME_TECNICO.md  LECTURA_RAPIDA.md  LLM_INTEGRATION.md  LLM_SANDBOX.md  METRICAS_CSV.md  PLAN_FASES_AVANZADO.md  RELEASE.md  RELEASE_CANDIDATE.md  REPLAY_DETERMINISTA.md  REPORTES_EVIDENCIA.md  RESULTADOS.md  REVISION_RELEASE_CANDIDATE.md  ROADMAP_POST_V0_9.md  SMOKE_NATIVO.md  SUPERVISOR_MULTIAGENTE.md  TESTS_CORE_RAPIDOS.md  (+5 more)
examples/: fallo_bizantino.loop  fallos_recuperables.loop  rescate.loop  verificacion.loop
proxy/: local.js  package.json  worker.js  wrangler.toml
scenarios/: dsl_delegation.loop  multiagent_failure.loop  react_basic.loop
scripts/: clean.sh  generate_evidence_report.py  run_benchmarks.sh  style_check.sh  validate.sh  validate_fast.sh  validate_multiagent.sh  validate_web.sh
src/: components.rs  events.rs  (+5 more)
(+66 files in other folders)
